Changes to static files static/css/main.css:   Prevented highlighting of text when holding shift to allow multiple selections   Added styling for batch action box static/javascript/main.js:   Added handling for torrent mouseover selection, and drop-down box when clicked with jQuery   Added selection of multiple torrents whilst holding the shift key

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,10 @@ label {
 table {
   width: 98%;
   border-collapse: collapse;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 td {
   padding: 3px;
@@ -438,4 +442,27 @@ img.file_img {
 
 .hidden {
     display : none;
+}
+
+#batchActionBox {
+    position : fixed;
+    left : 2px;
+    top : 150px;
+    border: 1px solid black;
+    background-color : #dce1bb;
+    padding : 1em;
+    -moz-border-top-right-radius : 15px;
+    -moz-border-bottom-right-radius : 15px;
+    border-top-right-radius : 15px;
+    border-bottom-right-radius : 15px;
+    -moz-border-top-left-radius : 2px;
+    -moz-border-bottom-left-radius : 2px;
+    border-top-left-radius : 2px;
+    border-bottom-left-radius : 2px;
+}
+#batch-controls {
+    padding-top : 1em;
+}
+.batch-control {
+    padding : 2px;
 }
